force-app/main/default/objects/OMVEntityEmployee__c/OMVEntityEmployee__c.object-meta.xml
<CustomObject>
    <description>junction object created to maintain a relationship between the users and the omv Entities</description>
    <label>OMV Entity Employee</label>
    <nameField>
        <displayFormat>EE-{00000}</displayFormat>
        <label>Entity Employee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OMV Entity Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>