force-app/main/default/objects/OMVEntityEmployee__c/fields/EmployeeUser__c.field-meta.xml
<CustomField>
    <fullName>EmployeeUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User related to the OMV Entity</description>
    <label>Employee User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CompanyCodes</relationshipName>
    <type>Lookup</type>
</CustomField>