force-app/main/default/objects/OMVEntityEmployee__c/fields/OMVEntity__c.field-meta.xml
<CustomField>
    <fullName>OMVEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OMV Entity related to the employee</description>
    <label>OMV Entity</label>
    <referenceTo>CompanyCode__c</referenceTo>
    <relationshipLabel>OMV Entity Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>