force-app/main/default/objects/OMVEntityEmployee__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>Technical field created to prevent the association of an user to more than one OMV Entity</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>